# syntacore_C

./: README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: dhrystone.scr1.1728222554348.pdom  dhrystone.scr1.language.settings.xml  dhrystone.scr1.llvm.language.settings.xml  hello_c.scr1.1728223112972.pdom  hello_c.scr1.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 4.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/dhrystone.scr1/: .markers  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/dhrystone.scr1/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/hello_c.scr1/: .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/hello_c.scr1/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: hello_c.scr1 Debug (1).launch  hello_c.scr1 Debug.launch  hello_c.scr1.elf.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2024/10/41/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
de1-soc/: CMakeLists.txt  main.c
de1-soc/scr-hal/: CMakeLists.txt  README.md  version.cmake
de1-soc/scr-hal/include/: arch.h  lock.h  perf.h  utils.h
de1-soc/scr-hal/include/drivers/: cache.h  feature_enable.h  htif.h  iccm_l3.h  ipic.h  leds.h  mpu_regs.h  pmp.h  pmu.h  rtc.h  uart_sifive.h  virtio.h
de1-soc/scr-hal/include/libc/: time.h
de1-soc/scr-hal/install/scr7_l2/include/: asm-magic.h  atomic.h  csr.h  memasm.h
de1-soc/scr-hal/install/scr7_l2/include/drivers/: clint.h  console.h  ctrl_l3.h  iccm.h  irq.h  mrt.h  pmu_csr.h
de1-soc/scr-hal/install/scr7_l2/include/libc/: stdio.h
de1-soc/scr-hal/install/scr7_l2/lib/scr7_l2/cmake/: bspConfig.cmake  halConfig.cmake  halTargets-linker.cmake  halTargets-noconfig.cmake  halTargets.cmake
de1-soc/scr-hal/install/scr7_l2/platform/common/: bsp0.lds  plf_scr1.h  plf_scr4.h  plf_scr6.h
de1-soc/scr-hal/install/scr7_l2/platform/scr7_l2/: README.md  plf.ini
de1-soc/scr-hal/install/scr9_l2/include/: stringify.h
de1-soc/scr-hal/install/scr9_l2/include/drivers/: 16550_regs.h  aia.h  dw_uart_regs.h  mpu.h  mtimer.h  plic.h  uart_16550.h  uart_dw.h  uart_sim.h
de1-soc/scr-hal/install/scr9_l2/lib/scr9_l2/cmake/: bspTargets-linker.cmake  halTargets-noconfig.cmake  halTargets.cmake
de1-soc/scr-hal/install/scr9_l2/platform/scr9_l2/: mem.ld  plf.h
de1-soc/scr-hal/platform/common/: bsp_reloc.lds  plf_scr3.h  plf_scr5.h  plf_scr7.h  plf_scr9.h
de1-soc/scr-hal/platform/scr1/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr3_rv32/: README.md  mem.ld  plf.h  plf.ini
de1-soc/scr-hal/platform/scr3_rv32_l1/: README.md  mem.ld  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr3_rv32_l1_nexys/: README.md  mem.ld  plf.h  plf.ini
de1-soc/scr-hal/platform/scr3_rv32_nexys/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr3_rv64/: README.md  mem.ld  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr3_rv64_l2/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr4_rv32/: README.md  mem.ld  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr4_rv32_l1/: README.md  plf.h  plf.ini
de1-soc/scr-hal/platform/scr4_rv64/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr4_rv64_l2/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr5_rv32/: README.md  mem.ld  plf.h  plf.ini
de1-soc/scr-hal/platform/scr5_rv32_tcm/: plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr5_rv64/: README.md  plf.h  plf.ini
de1-soc/scr-hal/platform/scr5_rv64_tcm/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr6/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr7_l2/: plf.cmake  plf.h
de1-soc/scr-hal/platform/scr7_l2_mpu/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr7_l3/: README.md  mem.ld  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr7_l3_mpu_legacy/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr9_l2/: README.md  plf.cmake  plf.ini
de1-soc/scr-hal/platform/scr9_l2_mpu/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/platform/scr9_l2_mpu_aia/: README.md  plf.cmake  plf.h  plf.ini
de1-soc/scr-hal/src/drivers/: aia.c  cache.c  console.c  ctrl_l3.c  htif.c  leds.c  mpu.c  pmp.c  pmu.c  rtc.c  sim_support.c  virtio.c
de1-soc/scr-hal/src/libc/: printf.c  stubs.c  syscalls.c
de1-soc/scr-hal/src/sys/: arch.c  crt0_110.S  lock.c  startup.cpp  sys_init.c  sys_reloc.c  sys_utils.S  utils.c
dhrystone.scr1/: .cproject  .project
hello_c.scr1/: .cproject  .project
test/: CMakeLists.txt  main.c
tests/: .cproject  .project
tests/dhry21/: dhry_1.c
